Issue #3097500 by kunalkapoor, majmunbog: Image looks broken on all the devices

--- a/assets/scss/_overrides.scss
+++ b/assets/scss/_overrides.scss
@@ -54,3 +54,8 @@ p:last-child,
 .author{
   margin-bottom: 25px;
 }
+
+img {
+  max-width: 100%;
+  height: auto;
+}
